# rule-machine

./: CMakeLists.txt  README.md
src/: main.cpp
src/Application/: Application.cpp  Application.hpp
src/Simulation/: Board.cpp  Board.hpp  Element.cpp  Element.hpp  Rule.cpp  Rule.hpp
